--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@ body{
 .navbar > .Language{
     text-align: right;
     font-size: .8em;
+    flex-direction: initial!important;
 }
 
 .navbar > .Language li{
