--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body{
     height: 100%;
     background-color: #666;
     z-index: 999;
-    display: none;
+    /* display: none; */
     opacity: .7;
 }
 
@@ -1105,6 +1105,10 @@ body{
 
 .mem_address{
     width: 80%;
+}
+.country_list select{
+    min-width: 20%;
+    font-size: 12px;
 }
 .mem_must:invalid{
     border: 1px solid #f00!important;
